@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE TS><TS version="1.1">
+<!DOCTYPE TS>
+<TS version="2.0" language="zh_CN">
 <context>
     <name>QStarDict::CSSEdit</name>
     <message>
@@ -10,7 +11,7 @@
     <message>
         <location filename="../cssedit.ui" line="30"/>
         <source>Element</source>
-        <translation></translation>
+        <translation>元素</translation>
     </message>
     <message>
         <location filename="../cssedit.ui" line="37"/>
@@ -110,13 +111,13 @@
     </message>
     <message>
         <location filename="../dictwidget.cpp" line="135"/>
-        <source>HTML files (*.html, *.htm)</source>
-        <translation>HTML文件(*.html, *.htm)</translation>
+        <source>HTML files (*.html *.htm)</source>
+        <translation>HTML文件(*.html *.htm)</translation>
     </message>
     <message>
         <location filename="../dictwidget.cpp" line="124"/>
         <source>Text files (*.txt)</source>
-        <translation>文本文件</translation>
+        <translation>文本文件(*.txt)</translation>
     </message>
     <message>
         <location filename="../dictwidget.cpp" line="130"/>
@@ -146,23 +147,23 @@
     <message>
         <location filename="../dictwidget.cpp" line="91"/>
         <source>Speak &amp;word</source>
-        <translation>读出单词 (&amp;w)</translation>
+        <translation>读出单词(&amp;w)</translation>
     </message>
     <message>
         <location filename="../dictwidget.cpp" line="88"/>
         <source>Prin&amp;t translation</source>
-        <translation>打印 (&amp;t)</translation>
+        <translation>打印翻译(&amp;t)</translation>
     </message>
 </context>
 <context>
     <name>QStarDict::MainWindow</name>
     <message>
-        <location filename="../mainwindow.cpp" line="118"/>
+        <location filename="../mainwindow.cpp" line="115"/>
         <source>About QStarDict</source>
         <translation>关于 QStarDict</translation>
     </message>
     <message>
-        <location filename="../mainwindow.cpp" line="119"/>
+        <location filename="../mainwindow.cpp" line="116"/>
         <source>&lt;b&gt;QStarDict %1 &lt;/b&gt; - Qt version of StarDict&lt;br&gt;</source>
         <translation></translation>
     </message>
@@ -177,7 +178,7 @@
         <translation>QStarDict</translation>
     </message>
     <message>
-        <location filename="../mainwindow.cpp" line="192"/>
+        <location filename="../mainwindow.cpp" line="189"/>
         <source>%1 - QStarDict</source>
         <translation>%1 - QStarDict</translation>
     </message>
@@ -219,7 +220,7 @@
     <message>
         <location filename="../mainwindow.ui" line="131"/>
         <source>&amp;Settings</source>
-        <translation>&amp;设置</translation>
+        <translation>设置(&amp;S)</translation>
     </message>
     <message>
         <location filename="../mainwindow.ui" line="146"/>
@@ -239,12 +240,12 @@
     <message>
         <location filename="../mainwindow.ui" line="159"/>
         <source>About &amp;Qt</source>
-        <translation>关于 Qt</translation>
+        <translation>关于Qt(&amp;Q)</translation>
     </message>
     <message>
         <location filename="../mainwindow.ui" line="168"/>
         <source>&amp;Configure QStarDict</source>
-        <translation>设置 QStarDict(&amp;C)</translation>
+        <translation>设置(&amp;C)</translation>
     </message>
     <message>
         <location filename="../mainwindow.ui" line="176"/>
@@ -252,14 +253,14 @@
         <translation>取词(&amp;S)</translation>
     </message>
     <message>
-        <location filename="../mainwindow.cpp" line="121"/>
+        <location filename="../mainwindow.cpp" line="118"/>
         <source>Copyright (C) 2007-2009 Alexander Rodin &lt;a href=&quot;http://qstardict.ylsoftware.com&quot;&gt;http://qstardict.ylsoftware.com&lt;/a&gt;</source>
         <translation type="unfinished">版权  (C) 2007 Alexander Rodin &lt;a href=&quot;http://qstardict.ylsoftware.com&quot;&gt;http://qstardict.ylsoftware.com&lt;/a&gt; {2007-2009 ?}</translation>
     </message>
     <message>
         <location filename="../mainwindow.ui" line="185"/>
         <source>QStarDict &amp;Help</source>
-        <translation type="unfinished"></translation>
+        <translation>帮助(&amp;H)</translation>
     </message>
     <message>
         <location filename="../mainwindow.ui" line="188"/>
@@ -270,77 +271,77 @@
 <context>
     <name>QStarDict::SettingsDialog</name>
     <message>
-        <location filename="../settingsdialog.cpp" line="69"/>
+        <location filename="../settingsdialog.cpp" line="68"/>
         <source>Enabled</source>
         <translation>启用</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.cpp" line="69"/>
+        <location filename="../settingsdialog.cpp" line="68"/>
         <source>Name</source>
         <translation>名称</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.cpp" line="69"/>
+        <location filename="../settingsdialog.cpp" line="68"/>
         <source>Plugin</source>
         <translation>插件</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.cpp" line="273"/>
+        <location filename="../settingsdialog.cpp" line="267"/>
         <source>Information about dictionary &quot;%1&quot;</source>
         <translation>字典&quot;%1&quot; 的信息</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.cpp" line="291"/>
+        <location filename="../settingsdialog.cpp" line="285"/>
         <source>&lt;b&gt;Name:&lt;/b&gt; %1&lt;br&gt;</source>
         <translation></translation>
     </message>
     <message>
-        <location filename="../settingsdialog.cpp" line="275"/>
+        <location filename="../settingsdialog.cpp" line="269"/>
         <source>&lt;b&gt;Plugin:&lt;/b&gt; %1&lt;br&gt;</source>
         <translation>&lt;b&gt;插件：&lt;/b&gt; %1&lt;br&gt;</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.cpp" line="277"/>
+        <location filename="../settingsdialog.cpp" line="271"/>
         <source>unknown</source>
         <translation>未知</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.cpp" line="295"/>
+        <location filename="../settingsdialog.cpp" line="289"/>
         <source>&lt;b&gt;Description:&lt;/b&gt; %1</source>
         <translation>&lt;b&gt;描述：&lt;/b&gt; %1</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.cpp" line="290"/>
+        <location filename="../settingsdialog.cpp" line="284"/>
         <source>Information about %1 plugin</source>
         <translation>关于插件 %1 的信息</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.cpp" line="292"/>
+        <location filename="../settingsdialog.cpp" line="286"/>
         <source>&lt;b&gt;Version:&lt;/b&gt; %1&lt;br&gt;</source>
         <translation>&lt;b&gt;版本：&lt;/b&gt; %1&lt;br&gt;</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.cpp" line="293"/>
+        <location filename="../settingsdialog.cpp" line="287"/>
         <source>&lt;b&gt;Authors:&lt;/b&gt; %1&lt;br&gt;</source>
         <translation>&lt;b&gt;作者：&lt;/b&gt; %1&lt;br&gt;</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.cpp" line="293"/>
+        <location filename="../settingsdialog.cpp" line="287"/>
         <source>&lt;br&gt;</source>
         <translation></translation>
     </message>
     <message>
-        <location filename="../settingsdialog.cpp" line="294"/>
+        <location filename="../settingsdialog.cpp" line="288"/>
         <source>&lt;b&gt;Can search similar words:&lt;/b&gt; %1&lt;br&gt;</source>
         <translation>&lt;b&gt;可以搜索相似单词：&lt;/b&gt; %1&lt;br&gt;</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.cpp" line="294"/>
+        <location filename="../settingsdialog.cpp" line="288"/>
         <source>yes</source>
         <translation>是</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.cpp" line="294"/>
+        <location filename="../settingsdialog.cpp" line="288"/>
         <source>no</source>
         <translation>否</translation>
     </message>
@@ -350,262 +351,257 @@
         <translation>QStarDict 设置</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="161"/>
+        <location filename="../settingsdialog.ui" line="170"/>
         <source>Show information about dictionary</source>
         <translation>显示字典信息</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="45"/>
+        <location filename="../settingsdialog.ui" line="53"/>
         <source>Global settings</source>
         <translation>全局设置</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="58"/>
+        <location filename="../settingsdialog.ui" line="59"/>
         <source>Instant search</source>
         <translation>即搜</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="73"/>
+        <location filename="../settingsdialog.ui" line="74"/>
         <source>Pronounce words using this command:</source>
         <translation>使用如下命令发音</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="80"/>
+        <location filename="../settingsdialog.ui" line="81"/>
         <source>Enter cmd for the speaching program.&lt;br&gt;If cmd contains &quot;%s&quot; it will be replaced to word, else word will be writen to stdin of speech process.</source>
         <translation></translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="109"/>
+        <location filename="../settingsdialog.ui" line="118"/>
         <source>Dictionaries</source>
         <translation>字典</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="133"/>
+        <location filename="../settingsdialog.ui" line="142"/>
         <source>Move up</source>
         <translation>上移</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="136"/>
+        <location filename="../settingsdialog.ui" line="145"/>
         <source>Up</source>
         <translation>上</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="147"/>
+        <location filename="../settingsdialog.ui" line="156"/>
         <source>Move down</source>
         <translation>下移</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="150"/>
+        <location filename="../settingsdialog.ui" line="159"/>
         <source>Down</source>
         <translation>下</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="164"/>
+        <location filename="../settingsdialog.ui" line="173"/>
         <source>Show info</source>
         <translation>显示信息</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="199"/>
+        <location filename="../settingsdialog.ui" line="208"/>
         <source>Plugins</source>
         <translation>插件</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="226"/>
+        <location filename="../settingsdialog.ui" line="235"/>
         <source>Show information about plugin</source>
         <translation>显示插件信息</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="229"/>
+        <location filename="../settingsdialog.ui" line="238"/>
         <source>Info</source>
         <translation>信息</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="240"/>
+        <location filename="../settingsdialog.ui" line="249"/>
         <source>Configure plugin</source>
         <translation>设定插件</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="243"/>
+        <location filename="../settingsdialog.ui" line="252"/>
         <source>Configure</source>
         <translation>设定</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="273"/>
+        <location filename="../settingsdialog.ui" line="290"/>
         <source>Popup window</source>
         <translation>弹出窗口</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="285"/>
+        <location filename="../settingsdialog.ui" line="302"/>
         <source>Behavior</source>
         <translation>行为</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="305"/>
+        <location filename="../settingsdialog.ui" line="322"/>
         <source>Pronounce the word</source>
         <translation>单词发音</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="322"/>
+        <location filename="../settingsdialog.ui" line="339"/>
         <source>Timeout before hide after mouse over</source>
         <translation>鼠标悬停隐藏超时</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="329"/>
+        <location filename="../settingsdialog.ui" line="346"/>
         <source>Don&apos;t hide</source>
         <translation>不隐藏</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="332"/>
+        <location filename="../settingsdialog.ui" line="349"/>
         <source> sec</source>
         <translation> 秒</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="367"/>
+        <location filename="../settingsdialog.ui" line="384"/>
         <source>Show only if modifier pressed</source>
         <translation>显示，仅当按下</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="378"/>
+        <location filename="../settingsdialog.ui" line="395"/>
         <source>Alt</source>
         <translation>Alt</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="383"/>
+        <location filename="../settingsdialog.ui" line="400"/>
         <source>Control</source>
         <translation>Control</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="388"/>
+        <location filename="../settingsdialog.ui" line="405"/>
         <source>Shift</source>
         <translation>Shift</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="393"/>
+        <location filename="../settingsdialog.ui" line="410"/>
         <source>Win</source>
         <translation>Win</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="403"/>
+        <location filename="../settingsdialog.ui" line="420"/>
         <source>Scan selection</source>
         <translation>选择区取词</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="413"/>
+        <location filename="../settingsdialog.ui" line="430"/>
         <source>Show if word not found</source>
         <translation>当未找到词时显示</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="548"/>
+        <location filename="../settingsdialog.ui" line="573"/>
         <source>Apperance</source>
         <translation>外观</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="443"/>
+        <location filename="../settingsdialog.ui" line="460"/>
         <source>Opacity</source>
         <translation>不透明度</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="450"/>
+        <location filename="../settingsdialog.ui" line="467"/>
         <source>%</source>
         <translation>%</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="479"/>
+        <location filename="../settingsdialog.ui" line="496"/>
         <source>Default width</source>
         <translation>默认宽度</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.ui" line="509"/>
+        <location filename="../settingsdialog.ui" line="526"/>
         <source>Default height</source>
         <translation>默认高度</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.cpp" line="276"/>
+        <location filename="../settingsdialog.cpp" line="270"/>
         <source>&lt;b&gt;Author:&lt;/b&gt; %1&lt;br&gt;</source>
-        <translation></translation>
+        <translation>作者</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.cpp" line="277"/>
+        <location filename="../settingsdialog.cpp" line="271"/>
         <source>&lt;b&gt;Words count:&lt;/b&gt; %1&lt;br&gt;</source>
-        <translation></translation>
+        <translation>单词数量</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.cpp" line="115"/>
+        <location filename="../settingsdialog.cpp" line="113"/>
         <source>All translation</source>
         <translation>所有的翻译</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.cpp" line="116"/>
+        <location filename="../settingsdialog.cpp" line="114"/>
         <source>Dictionary name</source>
         <translation>字典名称</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.cpp" line="117"/>
+        <location filename="../settingsdialog.cpp" line="115"/>
         <source>Title</source>
         <translation>标题</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.cpp" line="118"/>
+        <location filename="../settingsdialog.cpp" line="116"/>
         <source>Explanation</source>
-        <translation></translation>
+        <translation>解释</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.cpp" line="119"/>
+        <location filename="../settingsdialog.cpp" line="117"/>
         <source>Abbreviation</source>
         <translation>缩写</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.cpp" line="120"/>
+        <location filename="../settingsdialog.cpp" line="118"/>
         <source>Example</source>
         <translation>例子</translation>
     </message>
     <message>
-        <location filename="../settingsdialog.cpp" line="121"/>
+        <location filename="../settingsdialog.cpp" line="119"/>
         <source>Transcription</source>
-        <translation></translation>
-    </message>
-    <message>
-        <location filename="../settingsdialog.ui" line="51"/>
-        <source>Use system tray</source>
-        <translation type="unfinished"></translation>
+        <translation>音标</translation>
     </message>
 </context>
 <context>
     <name>QStarDict::TrayIcon</name>
     <message>
-        <location filename="../trayicon.cpp" line="37"/>
+        <location filename="../trayicon.cpp" line="36"/>
         <source>QStarDict</source>
         <translation>QStarDict</translation>
     </message>
     <message>
-        <location filename="../trayicon.cpp" line="38"/>
+        <location filename="../trayicon.cpp" line="37"/>
         <source>&amp;Scan</source>
         <translation>取词(&amp;S)</translation>
     </message>
     <message>
-        <location filename="../trayicon.cpp" line="48"/>
+        <location filename="../trayicon.cpp" line="47"/>
         <source>&amp;Configure QStarDict</source>
         <translation>设置 QStarDict(&amp;C)</translation>
     </message>
     <message>
-        <location filename="../trayicon.cpp" line="51"/>
+        <location filename="../trayicon.cpp" line="50"/>
         <source>&amp;Quit</source>
         <translation>离开(&amp;Q)</translation>
     </message>
     <message>
-        <location filename="../trayicon.cpp" line="92"/>
+        <location filename="../trayicon.cpp" line="84"/>
         <source>QStarDict: scanning is %1</source>
-        <translation type="unfinished"></translation>
+        <translation>QStarDict: 取词已%1</translation>
     </message>
     <message>
-        <location filename="../trayicon.cpp" line="92"/>
+        <location filename="../trayicon.cpp" line="84"/>
         <source>enabled</source>
-        <translation type="unfinished"></translation>
+        <translation>启动</translation>
     </message>
     <message>
-        <location filename="../trayicon.cpp" line="92"/>
+        <location filename="../trayicon.cpp" line="84"/>
         <source>disabled</source>
-        <translation type="unfinished"></translation>
+        <translation>停止</translation>
     </message>
 </context>
 </TS>
